...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="uu0-Lq-NQr" id="Bqo-wn-fYG"/>
                            <outlet property="delegate" destination="uu0-Lq-NQr" id="KOo-51-bBe"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="TODO" id="de2-yL-xLv">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Keh-sm-2jr">
                            <connections>
                                <action selector="showDialog:" destination="uu0-Lq-NQr" id="d2Q-dV-hWG"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
